adding coaching content to website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,8 @@
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
           <small>{{ site.tagline }}:</small><br>
 
-          <small><a href="https://www.linkedin.com/in/nathanmaton">About</a></small>
-
+          <!--<small><a href="https://www.linkedin.com/in/nathanmaton">About</a></small>
+          -->
           {% for page in site.pages_list %}
           &nbsp;&nbsp;&nbsp;
           <small><a href="{{ page[1]  }}">{{ page[0] }}</a></small>
